# topst

./: .env  .gitignore  GOVERNANCE.md  LICENSE  Makefile  README.md  config.json  full_pipeline_demo.py  json_schema_validation_code.py  pyproject.toml  schema.py  spase_to_schema.py  spase_to_schema_json.py
.devcontainer/: devcontainer.json
.ipynb_checkpoints/: spase_instrument_to_pidinst_doi-checkpoint.ipynb
bookend/: bookend-pids.ipynb  bookend.ipynb  bookend.ttl
bookend/.ipynb_checkpoints/: bookend-checkpoint.ipynb
bookend/data/: pidinst.xml  spase.owl  spase.ttl
bookend/data/spase-data/: spase-record.xml
bookend/figures/: bookend-structure.graphml
bookend/spase_model/: __init__.py  spase_2_6_0.py
datacite_pidinst_spase/: datacite_validator.py  pyproject.toml  spase_data_utils.py  validation_pidnist.ipynb
datacite_pidinst_spase/sample_data/: dummy_pidinst.xml  ni000001.xml
docs/: _config.yaml  domain-vision-statement.md  index.md  usability-sessions-round-1-invitation.md
