[project]
name = "hpde-datacite"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datacite==1.2.0",
    "lxml>=5.3.0",
    "pandas>=2.2.3",
    "requests>=2.32.3",
    "ruff>=0.7.3",
    "xmltodict==0.14.2",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
